--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -145,7 +145,7 @@ ndo
 - Gifsicle 1.88 - http://www.lcdf.org/gifsicle/
 - Ghostcript 9.19 - http://www.ghostscript.com
 - GNU Strip 2.26 - http://www.gnu.org/software/binutils/
-- ImageMagick 7.0.1.1 - http://www.imagemagick.org
+- ImageMagick 7.0.1.5 - http://www.imagemagick.org
 - ImageWorsener 1.3.0 - http://entropymine.com/imageworsener
 - jhead 3.00 - http://www.sentex.net/~mwandel/jhead/
 - jpegoptim 1.4.3 - http://www.kokkonen.net/tjko/projects.html
@@ -179,7 +179,7 @@ XXXXX - YYYYYYY
 - Disabled Leanify, and PNGout for APNG because the broke optimized files in some cases (Folding Home).
 - Disabled ImageWorsener for WEBP, because it is not lossless (Skibicki #9).
 - Added EPRT extension (Solid Works) to ZIP chain (maadjordan).
-- Updated ImageMagick to 7.0.1.1 with HDRI support.
+- Updated ImageMagick 7.0.1.5 with HDRI support.
 
 
 8.30 - 2016/04/30
