--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -189,6 +189,7 @@ XXXXX - YYYYYYY
 - Updated donation button to use Paypal.me so it can accept different currencies that euros (JoeW).
 - Updated to ECT 0.4 x86 and x64 optimized builds (thanks Malloc Voidstar).
 - Updated ImageMagick 7.0.1.5 with HDRI support.
+- Updated to NSIS 3.0 RC1.
 
 
 8.30 - 2016/04/30
