Added INI setting JPEGAllowLossy=false to enable lossy JPEG optimizations (maadjordan)
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@480 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -177,6 +177,7 @@ ndo
 
 
 XXXXX - YYYYYYY
+- Added INI setting JPEGAllowLossy=false to enable lossy JPEG optimizations (maadjordan).
 - Added ZIP SFX installer detection.
 - Added InstallShield Wizard and RTPatch Updater detections to exclude processing like we did with Inno Setup (ThisWillDoIt).
 - Added Nullsoft Install System detections to exclude processing in EXE chain.
