Added MIME (.mht .mhtml .eml .emlx .msg .mbx .vcf .vcard) support with Leanify (JoeW)
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@484 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -178,6 +178,7 @@ ndo
 
 
 XXXXX - YYYYYYY
+- Added MIME (.mht .mhtml .eml .emlx .msg .mbx .vcf .vcard) support with Leanify (JoeW).
 - Added optional JPEG lossy recompression by adding jpeg-recompress (maadjordan).
 - Added INI setting JPEGAllowLossy=false to enable lossy JPEG optimizations (maadjordan).
 - Added ZIP SFX installer detection.
