--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -1,6 +1,3 @@
-- Lossy JPEG optimization with jpeg-recompress --method smallfry in.jpg out.jpg (freeko2)
-https://github.com/danielgtaylor/jpeg-archive/releases 
-
 - Add a Pause/Resume option (Pritt).
 
 - Disable optimize all button until full queued files has been added (Pritt).
@@ -177,7 +174,10 @@ ndo
 - zRecompress 2.12 - http://nikkhokkho.sourceforge.net/static.php?page=zRecompress
 
 
-XXXXX - YYYYYYY
+X.XX - YYYY/MM/DD
+
+
+8.40 - 2016/06/17
 - Added MIME (.mht .mhtml .eml .emlx .msg .mbx .vcf .vcard) support with Leanify (JoeW).
 - Added optional JPEG lossy recompression by adding jpeg-recompress (maadjordan).
 - Added INI setting JPEGAllowLossy=false to enable lossy JPEG optimizations (maadjordan).
@@ -186,7 +186,7 @@ XXXXX - YYYYYYY
 - Added Nullsoft Install System detections to exclude processing in EXE chain.
 - Added ECT to the MP3 toolchain to optimize embedded images (Skibicki).
 - Fixed a bug calling Ghostcript, that ignored parameters after dPDFSETTINGS which should made quality and size better (Skibicki #5).
-- Removed genetator metatag from tidy output (JoeW).
+- Removed generator metatag from tidy output (JoeW).
 - Disabled Leanify, and PNGout for APNG because the broke optimized files in some cases (Folding Home).
 - Disabled ImageWorsener for WEBP, because it is not lossless (Skibicki #9).
 - Added EPRT extension (Solid Works) to ZIP chain (maadjordan).
@@ -200,7 +200,6 @@ XXXXX - YYYYYYY
 - Updated to cppcheck 1.74.
 - Upgraded distributions to 7-Zip 16.02.
 - Some minor optimizations and code cleanup.
-
 
 8.30 - 2016/04/30
 - Added UPX to the EXE/DLL tool chain (guindos98, necros).
