--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -10,7 +10,7 @@
 
 - Window positions not properly restored on launch (hairycactus).
 
-- Faster and slighly larger 32 bit version thanks to be migrated to CLang backend (64 bit already was).
+- Faster and slightly larger 32 bit version thanks to be migrated to CLang backend (64 bit already was).
 
 - ZIPRecurse=false does same as ZIPRecurse=true (Special).
 
@@ -23,17 +23,17 @@
 - Add Huffmix PNG compression (Stephan Busch).
 
 
-- Tune Ghostcript arguments http://encode.ru/threads/1589-FileOptimizer?p=44121&viewfull=1#post44121 (Necros).
+- Tune Ghostscript arguments http://encode.ru/threads/1589-FileOptimizer?p=44121&viewfull=1#post44121 (necros).
 - Add INI setting for optional independent compression levels for each file type (Newtomic).
 - Add a technical section on the help file and website to detail how optimizations works, and lossless (alex).
 - Add INI option ShutdownWhenDone=false to specify the OS to shutdown as soon as optimization of all files is done (guindos98).
 - On Windows XP, log seems fine, but files get not processed and finally the original file deleted (Vivil).
 
-- Multithreading support: 
+- Multithreading support:
 	* http://op.htmsoft.com/articles/Articlea1-2-1.html
 	* http://elvex.ugr.es/decsai/builder/threads/
 
-- Implement a Statistic section in INI file: Total time, total opens, total files processed, total Mbytes porcessed, total Mbytes saved, ...
+- Implement a Statistic section in INI file: Total time, total opens, total files processed, total Mbytes processed, total Mbytes saved, ...
 
 - Deletes files instead of processing them. https://sourceforge.net/p/nikkhokkho/discussion/fileoptimizer/thread/ced9a3af/ (Vivil).
 
@@ -49,7 +49,7 @@
 	KS_EXTENSION_MP4
 	KS_EXTENSION_MPEG: AVI, MPG, MPEG
 	KS_EXTENSION_FLV: FLV
-	KS_EXTENSION_WMV: WMV, WMA 
+	KS_EXTENSION_WMV: WMV, WMA
 	KS_EXTENSION_RM: RV, RA, RM, RMVB, RAM. SMIL
 	ffmpeg.exe -i INPUT -vcodec copy -acodec copy OUTPUT
 
@@ -97,11 +97,11 @@
 
 - pngcrush http://sourceforge.net/projects/pmt/files/pngcrush-executables/1.7.52/
 
-- Is it possible to add by FileOptimizer in the Gui a menu 
-"Windows Explorer integration" 
+- Is it possible to add by FileOptimizer in the GUI a menu
+"Windows Explorer integration"
 -> add FileOptimizer to (all/selected) supported file extensions (Graphic file formats, PE (exe, dll,...), archives, documents, others
 
-- I need for doing this Hypersnap cause can not find another program who can open bmp and quick convert to RLE with this settings. MAny times needed for example inno setup only support bmp by creating installer in the setup interface same by al possible SFX modules by compression tools such as FreeARC by the sfx file can save up to 50% size or inside programs with ressource hacker / PE Explorer replacing bmp's in executables and co or by Visual Studio by self. This is a highly needed feature (Recon)
+- I need for doing this Hypersnap cause can not find another program who can open bmp and quick convert to RLE with this settings. Many times needed for example Inno Setup only support bmp by creating installer in the setup interface same by al possible SFX modules by compression tools such as FreeARC by the sfx file can save up to 50% size or inside programs with resource hacker / PE Explorer replacing bmp's in executables and co or by Visual Studio by self. This is a highly needed feature (Recon)
 
 
  El archivo no se podrá arrastrar en estos dos casos:
@@ -114,7 +114,7 @@ y:
 3. intentar arrastrar un archivo
 
 - Single click to preview files, or remove underline (Dr. Bhavesh).
-- Make sure PNG keeps metadata when kee metadata is set.
+- Make sure PNG keeps metadata when keep metadata is set.
 - Version written also on exit, and checked on load.
 
 - imagew jpeg loseless, miff?
@@ -128,7 +128,7 @@ y:
 - Systray
 -          Meter todos los archivos en un array y de ahí volvar al grid.
 -          Menú contextual de cancel donde está el optimize, que ponga una variable global, y se use en vez del visible.
-ndo 
+ndo
 
 
 
@@ -140,10 +140,10 @@ ndo
 - defluff 0.3.2 - http://j-o.users.sourceforge.net
 - Document Press Version 6.01 - http://encode.ru/threads/336-Document-Press-6-01
 - ECT 0.4 - https://github.com/fhanau/Efficient-Compression-Tool
-- FLACOUT 07/03/2014 - http://advsys.net/ken/utils.htm 
+- FLACOUT 07/03/2014 - http://advsys.net/ken/utils.htm
 - Flasm 1.62 - http://flasm.sourceforge.net
 - Gifsicle 1.88 - http://www.lcdf.org/gifsicle/
-- Ghostcript 9.19 - http://www.ghostscript.com
+- Ghostscript 9.19 - http://www.ghostscript.com
 - GNU Strip 2.26 - http://www.gnu.org/software/binutils/
 - ImageMagick 7.0.2.0 - http://www.imagemagick.org
 - ImageWorsener 1.3.0 - http://entropymine.com/imageworsener
@@ -185,7 +185,7 @@ X.XX - YYYY/MM/DD
 - Added InstallShield Wizard and RTPatch Updater detections to exclude processing like we did with Inno Setup (ThisWillDoIt).
 - Added Nullsoft Install System detections to exclude processing in EXE chain.
 - Added ECT to the MP3 toolchain to optimize embedded images (Skibicki).
-- Fixed a bug calling Ghostcript, that ignored parameters after dPDFSETTINGS which should made quality and size better (Skibicki #5).
+- Fixed a bug calling Ghostscript, that ignored parameters after dPDFSETTINGS which should made quality and size better (Skibicki #5).
 - Removed generator metatag from tidy output (JoeW).
 - Disabled Leanify, and PNGout for APNG because the broke optimized files in some cases (Folding Home).
 - Disabled ImageWorsener for WEBP, because it is not lossless (Skibicki #9).
@@ -204,7 +204,7 @@ X.XX - YYYY/MM/DD
 8.30 - 2016/04/30
 - Added UPX to the EXE/DLL tool chain (guindos98, necros).
 - Added INI setting bEXEEnableUPX=false to enable UPX EXE compression. For instance bEXEEnableUPX=true will enable UPX processing (guindos98, necros).
-- Added INI setting LeanifyIterations=-1 to specify desired Leanify iterations independantly of the compression level. For instance LeanifyIterations=128 will instruct Leanify to always use 128 iterations (necros).
+- Added INI setting LeanifyIterations=-1 to specify desired Leanify iterations independently of the compression level. For instance LeanifyIterations=128 will instruct Leanify to always use 128 iterations (necros).
 - Added stereo extensions: MPO (Multi Picture Object), PNS (PNG Stereo) and JPS (JPEG Stereo).
 - Added LXF extension (Lego Digital Designer) to ZIP chain (Jaff).
 - Tweaked ECT invoking to make it get better compression ratios (Jaff).
@@ -214,12 +214,12 @@ X.XX - YYYY/MM/DD
 - Removed crop-transparency from gifsicle arguments, since it can downsize resulting GIF image, and thus not being lossless (Austin Donisan).
 - Disable TruePNG on ICO files because it crashes (TPS).
 - Avoid using Advzip on SFX ZIP files due to header being removed (Jaff).
-- Updated AdvanceCOMP to 1.20 (Jaff). 
+- Updated AdvanceCOMP to 1.20 (Jaff).
 - Updated Leanify to 0.4.3.103 daily binaries.
 - Updated pngquant to 2.5.2.
 - Updated TruePNG to 0.6.2.2.
 - Updated strip to 2.26.
-- Updated Ghostcript to 9.19. Please report any issue if I should revert to 9.15.
+- Updated Ghostscript to 9.19. Please report any issue if I should revert to 9.15.
 - Updated OptiPNG to 0.7.6 since Hg 20121021 is discontinued.
 - Updated ImageMagick to 6.9.3.8 with HDRI support.
 - Updated to cppcheck 1.73.
@@ -230,7 +230,7 @@ X.XX - YYYY/MM/DD
 - Added INI setting AllowDuplicates=false to allow adding same file more than once. If enabled, adding to the grid will be much faster, specially on very large grids (Priit).
 - Better High DPI compatibility.
 - Use Windows 10 theme by default on Windows 8 and newer.
-- Cleanedup JPEG options page glitches (d4k0).
+- Cleaned up JPEG options page glitches (d4k0).
 - Delay load shcore.dll to avoid a C++ Builder bug on WINE (trlkly).
 - Make child windows show always on top, even if main window uses AlwaysOnTop=false (hairycactus).
 - Make FileOptimizer a true lossless tool by default by setting PDF Profile to none by default (RejZoR).
@@ -241,7 +241,7 @@ X.XX - YYYY/MM/DD
 - Updated to ECT 0.2.1 x86 and x64 optimized builds (thanks Malloc Voidstar).
 - Updated ImageMagick to 6.9.3.3 with HDRI support.
 - Updated TruePNG to 0.6.1.9.
-- Revert to Ghostcript 9.15 since Ghostcript 9.18 crashes, and 9.16 has worse compression ratios (hairycactus).
+- Revert to Ghostscript 9.15 since Ghostscript 9.18 crashes, and 9.16 has worse compression ratios (hairycactus).
 - Updated to NSIS 3.0 beta 3.
 - Updated to cppcheck 1.72.
 - Some minor optimizations and code cleanup.
@@ -250,7 +250,7 @@ X.XX - YYYY/MM/DD
 8.10 - 2015/12/26
 - Enhanced GZ, JPEG and PNG compression by adding ECT 0.1 by Felix Hanau.
 - Fixed Windows 10 theme (d4k0).
-- Workedarround a bug in C++ Builder Seattle that made executables require BORLANDMM.DLL -https://forums.embarcadero.com/thread.jspa?messageID=706835- (d4k0).
+- Worked around a bug in C++ Builder Seattle that made executables require BORLANDMM.DLL -https://forums.embarcadero.com/thread.jspa?messageID=706835- (d4k0).
 - Fixed a problem with disabled menu items after optimization (d4k0).
 
 8.00 - 2015/12/25
@@ -260,7 +260,7 @@ X.XX - YYYY/MM/DD
 - Made check for updates detect faulty routers and switches returning HTML content when no valid data connection exists (Armin Mueller).
 - Added INI option TempDirectory="" to specify FileOptimizer temporary folder to use. If empty, it will use system defaults. Set it to a fast SSD drive or ramdisk to increase performance (Newtomic).
 - Prevented Windows message about "Program not responding" when adding lots of files (Zulfikar Raditya Hernanta).
-- Upgraded to Ghostcript 9.18.
+- Upgraded to Ghostscript 9.18.
 - Updated ImageMagick to 7.0.0.0 with HDRI support.
 - Updated pngquant to 2.5.1.
 - Updated Leanify to 0.4.3.
@@ -277,7 +277,7 @@ X.XX - YYYY/MM/DD
 
 7.90 - 2015/08/20
 - Tested to be compatible on new Microsoft Windows 10.
-- Better PNG optimizations by allowing tunning TruePNG parameters, including remove metadata and lossy recompression.
+- Better PNG optimizations by allowing tuning TruePNG parameters, including remove metadata and lossy recompression.
 - Better JPEG optimizations by allowing to run jhead when metadata should be copied too (Jaff).
 - Do not convert SVG to SVGZ (JoeW).
 - Updated Leanify to 0.4.2.64 daily binaries.
@@ -302,7 +302,7 @@ X.XX - YYYY/MM/DD
 - Upgraded distributions to 7-Zip 15.03.
 
 7.70 - 2015/05/17
-- Added a new PNG option to optionalally allow lossy PNG recompression support with pngquant 2.4.0 (Jack Cherng).
+- Added a new PNG option to optionally allow lossy PNG recompression support with pngquant 2.4.0 (Jack Cherng).
 - Made higher compression profiles, optimize better at a cost of extra processing time. Now on best setting, we are using 30 zopfli iterations instead of 9 (SvenBent).
 - Added MNG files detection by content.
 - Added WinRAR SFX detection to exclude processing like we did with Inno Setup (SvenBent).
@@ -326,7 +326,7 @@ X.XX - YYYY/MM/DD
 - Updated help file.
 - PNGOUT and FLACOUT has been unpacked to avoid false positives by scary antivirus.
 - Fix PDF no downsampling profile.
-- Revert to ghostcript 9.15 since Ghostcript 9.16 crashes with errorlevel 0 (everything OK), when source file name has extended characters. It worked properly on 9.15.
+- Revert to Ghostscript 9.15 since Ghostscript 9.16 crashes with errorlevel 0 (everything OK), when source file name has extended characters. It worked properly on 9.15.
 - Updated ImageMagick to 6.9.12.
 - Some minor optimizations and code cleanup.
 
@@ -336,7 +336,7 @@ X.XX - YYYY/MM/DD
 - Make sure temporary filenames have no collisions even if original files are named the same across different folders (Dmitry).
 - Updated Leanify 0.4.2.43 daily binaries.
 - Updated APNG Optimizer to 1.4.
-- Upgraded to Ghostcript 9.16.
+- Upgraded to Ghostscript 9.16.
 - Upgraded distributions to 7-Zip 15.00.
 - Some minor optimizations and code cleanup.
 - Upgraded to C++ Builder XE8.
@@ -393,7 +393,7 @@ X.XX - YYYY/MM/DD
 - Added Leanify to the JPEG tool chain.
 - Added Leanify to the EXE tool chain.
 - Added .rdb and .gft extensions to the ZIP tool chain.
-- Slightly smaller PDF recompression by using dDetectDuplicateImages=true Ghostcript switch.
+- Slightly smaller PDF recompression by using dDetectDuplicateImages=true Ghostscript switch.
 - Fixed log levels in Options dialog.
 - Updated to jHead 3.00.
 - Updated ImageMagick to 6.9.0.6.
@@ -423,9 +423,9 @@ X.XX - YYYY/MM/DD
 - Unpacked TruePNG.exe to avoid false positives with Symantec AVs (LayZee).
 - Improved WEBP compression ratio updating to libwebp 0.4.2.
 - Improved GZ, MNG, PNG, and ZIP compression ratio updating to AdvanceCOMP 1.20 beta.
-- Upgraded to Ghostcript 9.15.
+- Upgraded to Ghostscript 9.15.
 - Removed ImageMagick from the JPEG toolchain because it can cause quality loss (deluge).
-- Brand new plugin execution, easier to mantain, and also more efficient.
+- Brand new plugin execution, easier to maintain, and also more efficient.
 - Enhanced keep file attributes option to also restore file last access time.
 - Updated APNG Optimizer to 1.3.
 - Updated mozjpeg to 3.00 which improves compression ratio, and fixes Photoshop incompatibilities (Lard).
@@ -464,7 +464,7 @@ X.XX - YYYY/MM/DD
 - Minor source code improvements.
 
 6.70 - 2014/04/27
-- Faster PDF compression upgrading to Ghostcript 9.14.
+- Faster PDF compression upgrading to Ghostscript 9.14.
 - Improved deflate compression by better combining deflopt and defluff.
 - Improved JPEG compression ratio including jhead.
 - Improved PNG compression ratio including TruePNG.
@@ -478,7 +478,7 @@ X.XX - YYYY/MM/DD
 6.60 - 2014/04/26
 - Fixes extra title bar on Metropolis and Windows themes (trlkly).
 - Reenabled jpegtran as as in 5.90 because sometimes it is better than mozjpeg (webfork).
-- Installer now transparentlly detects OS bitness, and extracts only 32 or 64 bit binaries (trlkly).
+- Installer now transparently detects OS bitness, and extracts only 32 or 64 bit binaries (trlkly).
 - Unpacked mozjpeg plugin to avoid antivirus false positives (Ryan Hietpas).
 - Installer version now properly registers on Add/Remove Programs.
 - Upgraded to C++ Builder XE6.
@@ -497,21 +497,19 @@ X.XX - YYYY/MM/DD
 - Added HTML options tab.
 - Added CSS options tab.
 - Added JS options tab.
-- Excecute plugins passing short file names to avoid path size limitations.
+- Execute plugins passing short file names to avoid path size limitations.
 - Enhanced General options tab with DoNotUseRecycleBin (DotDotDot).
 - Added a Stop command to give up any pending optimization.
 - Implemented a donate button in the website and in the application. Contribute with the amount you consider my work deserves.
 - Reorganized help file with different sections (webfork).
 - Added tooltips in ribbon buttons.
 - Make about Window close with ESC and RETURN.
-- Totally rewritten Messagebox management for increased accessibility and flexiility.
+- Totally rewritten Messagebox management for increased accessibility and flexibility.
 - Optimized internal icons.
 - Replaced 7-Zip SFX installer with NSIS 3.00a2 installer (including shortcuts and uninstaller).
 - Faster JPEG compression upgrading to mozjpeg 1.01 r43.
 - Updated strip to 2.25.
 - Upgraded to WinCHM 4.43.
-
-
 
 6.00 - 2014/04/06
 - Added PCX optimization support with PCXLite (no404error).
@@ -535,9 +533,8 @@ X.XX - YYYY/MM/DD
 - Added ini option EXEDisablePETrim=false to disable PETrim when processing EXE files. Resulting executables will be larger, but it will prevent broking some SFX and installers as well as stripping digital signatures (Ascend4nt).
 - Added ini option DoNotUseRecycleBin=false to prevent copying original files to your Recycle Bin. Be aware that enabling such option will prevent recovering original files (Runner112).
 - Much improved WebP optimization by using cwebp and dwebp in libwebp (Runner112).
-- Improved PDF compression upgrading to Ghostcript 9.10.
+- Improved PDF compression upgrading to Ghostscript 9.10.
 - Updated to ImageMagick 6.8.6.9.
-
 
 5.80 - 2013/07/30
 - Added JNG to the JPEG tool chain.
@@ -547,7 +544,6 @@ X.XX - YYYY/MM/DD
 - Included vcomp100.dll required by ImageMagick (Kolpotoru).
 - Upgraded to C++ Builder XE4 Update 1.
 
-
 5.70 - 2013/06/19
 - Improved PNG compression ratio and speed updating to PngOptimizer 2.3.
 - Upgraded Gifsicle to 1.71 (custom build).
@@ -556,7 +552,6 @@ X.XX - YYYY/MM/DD
 - Prevented zRecompress generating larger files.
 - Closing windows is now more responsive.
 - Some minor optimizations and code cleanup.
-
 
 5.60 - 2013/05/01
 - Added ICO PNG optimization support with ImageMagick.
@@ -592,11 +587,11 @@ X.XX - YYYY/MM/DD
 5.00 - 2013/02/17
 - Improved GIF compression by adding ImageMagick.
 - Improved JPEG compression by adding ImageMagick.
-- Improved PDF compression upgrading to Ghostcript 9.07.
+- Improved PDF compression upgrading to Ghostscript 9.07.
 - EXE compression is now safer by removing /StripFixups:Y in PETrim.
 - Upgraded ImageWorsener to 1.1.0.
 - Upgraded Gifsicle to 1.70.
-- New ribbon interface, just for those complaining about ugly interface. For the rest, the tradicional context menu is still available, and ribbon can be minimized to save screen space.
+- New ribbon interface, just for those complaining about ugly interface. For the rest, the traditional context menu is still available, and ribbon can be minimized to save screen space.
 - Implemented remove selected files option.
 - Total bytes saved are now shown when finishing the optimization.
 - Solved an issue with Add files dialog in Windows XP and older, by switching from TFileOpenDialog to TOpenDialog.
@@ -627,7 +622,7 @@ X.XX - YYYY/MM/DD
 - Added native Win64 support (FileOptimizer64.exe).
 - Added ini option KeepAttributes=false to keep file attributes and timestamp after optimization.
 - Added ability to optimize read-only and system files.
-- Included 64 bit plugins (Ghostcript, ImageWorsener, jpegoptim, MP3packer, PngOptimizer, zRecompress).
+- Included 64 bit plugins (Ghostscript, ImageWorsener, jpegoptim, MP3packer, PngOptimizer, zRecompress).
 - Win64 portability improvements.
 - Upgraded to C++ Builder XE3 Update 1.
 
@@ -665,11 +660,11 @@ X.XX - YYYY/MM/DD
 - Added ability to preview files in grid by double clicking them.
 - Implemented Windows 7 and later taskbar progress.
 - Allow files grid interaction even while optimizing is in progress.
-- Improved grid status column formating to make sorting more natural.
+- Improved grid status column formatting to make sorting more natural.
 - Improved visual appearance on rare color scheme combinations and themes.
-- Enhanced statusbar progress display.
+- Enhanced status bar progress display.
 - Tweaked main window components in order to better fit in low screen resolutions.
-- Constrained main window minimun width and height to avoid component misplacing.
+- Constrained main window minimum width and height to avoid component misplacing.
 - Enhanced and updated CHM help file.
 - Upgraded to C++ Builder XE3.
 - Main executable file is not packed anymore due to buggy antivirus raising false positives.
@@ -678,7 +673,7 @@ X.XX - YYYY/MM/DD
 1.70 - 2012/09/07
 - Improved PNG, APNG, ZIP and GZ compression ratio including defluff (m^2).
 - Improved PNG and APNG compression ratio upgrading to OptiPNG Hg 20120824.
-- It is possible to add files in several batches, until Optimize option is choosen.
+- It is possible to add files in several batches, until Optimize option is chosen.
 - Updated autoupdate functionality to new home at http://nikkhokkho.sourceforge.net
 
 1.65 - 2012/09/03
@@ -691,7 +686,7 @@ X.XX - YYYY/MM/DD
 - Better file type extension detection.
 - Improved Windows XP and older appearance by tweaking grid odd color.
 - Added ini option ProcessPriority=IDLE_PRIORITY_CLASS to set default process priority
-- Added ini option CheckForUpdates to enable/disable automatic check for supdates functionality.
+- Added ini option CheckForUpdates to enable/disable automatic check for updates functionality.
 - Added ini option GZCopyMetadata=false to enable copying GZ metadata.
 - Added ini option MP3CopyMetadata=false to enable copying MP3 metadata.
 - Added ini option ZIPCopyMetadata=false to enable copying ZIP metadata.
@@ -707,7 +702,7 @@ X.XX - YYYY/MM/DD
 - Dynamically load Vista and later COMCTL32.DLL, so FileOptimizer works again under Windows XP (Robert Bass / Barry).
 
 1.51 - 2012/08/26
-- Properly clean temporary file, so in extreme scenarios plugin invocation works as espected (Stephan Busch).
+- Properly clean temporary file, so in extreme scenarios plugin invocation works as expected (Stephan Busch).
 
 1.50 - 2012/08/25
 - Added BMP optimization support with ImageWorsener.
@@ -742,7 +737,7 @@ X.XX - YYYY/MM/DD
 - Added DLL optimization support.
 - Improved PNG compression ratio by tweaking PNGOut and OptiPNG parameters.
 - Improved MNG compression ratio by tweaking advmng parameters.
-- Improved PDF compression ratio by tweaking Ghostcript parameters.
+- Improved PDF compression ratio by tweaking Ghostscript parameters.
 - Improved EXE compression ratio and speed by replacing GNU strip and StripReloc with PETrim.
 - Improved GIF compression ratio and speed updating to Gifsicle 1.6.7 (custom built).
 - Improved ZIP and GZ compression ratio and speed updating to ZLib 1.2.7.
@@ -752,11 +747,11 @@ X.XX - YYYY/MM/DD
 - Grid contents can be sorted ascending and descending by clicking on column headers.
 - Better default grid columns width and number format.
 - Colored rows in files grid to make it easy to read.
-- Status bar with global progress and other informations.
+- Status bar with global progress and other information.
 - Better Win64 compatibility.
 - Prevent dragging files to the grid when there are already files.
 - Gracefully exit even if there are plugin processes running.
-- Make sure that resulting APNG, JPEG, PDF, and TIFF files are always smaller than original ones before overwritting them.
+- Make sure that resulting APNG, JPEG, PDF, and TIFF files are always smaller than original ones before overwriting them.
 
 1.10 - 2012/08/13
 - Added EXE optimization support.
@@ -766,10 +761,10 @@ X.XX - YYYY/MM/DD
 - Improved ZIP and GZ compression ratio and speed updating to ZLib 1.2.5.
 - Improved PNG compression ratio by tweaking PNGOut parameters.
 - Improved JPEG compression ratio by tweaking jpegtran parameters.
-- Added support for Ghostcript x64 too.
+- Added support for Ghostscript x64 too.
 - Extended ZIP support to .epub and .cbz
 - Ability to automate file optimization by invoking FileOptimizer with one or more command line parameters, supporting folders to recurse or files.
-- Stability and perfomance improvements on grid handling code.
+- Stability and performance improvements on grid handling code.
 - During compression FileOptimizer is now more responsiveness.
 
 1.00 - 2012/08/11
@@ -783,6 +778,3 @@ X.XX - YYYY/MM/DD
 
 0.90 - 2012/08/09
 - Initial feature complete private beta.
-
-
-
