Switched jpeg-recompress method to SmallFry due to better compression ratios than SSIM, at least until it is patented
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@489 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -178,6 +178,7 @@ ndo
 X.XX - YYYY/MM/DD
 - Added optional GIF lossy recompression by adding Gifsicle Lossy (thanks to jibz for the binaries).
 - Added INI setting GIFAllowLossy=false to enable lossy GIF optimizations (maadjordan).
+- Switched jpeg-recompress method to SmallFry due to better compression ratios than SSIM, at least until it is patented.
 - Fixed some english typos (thanks Armin).
 
 
