--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -176,7 +176,7 @@ ndo
 
 
 X.XX - YYYY/MM/DD
-- Added OLE files detection by content.
+- Added OLE and OBJ files detection by content.
 - Added optional GIF lossy recompression by adding Gifsicle Lossy (thanks to jibz for the binaries).
 - Added INI setting GIFAllowLossy=false to enable lossy GIF optimizations (maadjordan).
 - Switched jpeg-recompress method to SmallFry due to better compression ratios than SSIM, at least until it is patented.
