--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -135,6 +135,7 @@ ndo
 
 - AdvanceCOMP 1.20 - http://advancemame.sourceforge.net
 - APNG Optimizer 1.4 - http://sourceforge.net/projects/apng/
+- Coherent PDF Lossless Compressor (smpdf) 1.4.1 - http://www.coherentpdf.com/compression.html
 - CSSTidy 1.3 - http://csstidy.sourceforge.net/download.php
 - DeflOpt 2.07 - http://www.walbeehm.com/download/
 - defluff 0.3.2 - http://j-o.users.sourceforge.net
@@ -146,7 +147,7 @@ ndo
 - Gifsicle Lossy 1.88 - https://kornel.ski/lossygif
 - Ghostscript 9.19 - http://www.ghostscript.com
 - GNU Strip 2.26 - http://www.gnu.org/software/binutils/
-- ImageMagick 7.0.2.0 - http://www.imagemagick.org
+- ImageMagick 7.0.2.4 - http://www.imagemagick.org
 - ImageWorsener 1.3.0 - http://entropymine.com/imageworsener
 - jhead 3.00 - http://www.sentex.net/~mwandel/jhead/
 - jpeg-archive 2.1.1 - https://github.com/danielgtaylor/jpeg-archive
@@ -176,6 +177,7 @@ ndo
 
 
 X.XX - YYYY/MM/DD
+- Added smpdf to the PDF toolchain (necros, maadjordan).
 - Added OLE and OBJ files detection by content.
 - Added optional GIF lossy recompression by adding Gifsicle Lossy (thanks to jibz for the binaries).
 - Added INI setting GIFAllowLossy=false to enable lossy GIF optimizations (maadjordan).
@@ -188,6 +190,7 @@ X.XX - YYYY/MM/DD
 - Clarified via tooltip (hint) that Enable Tidy (HTMLEnableTidy INI setting) in the HTML options tab, applies also to SVG (maadjordan).
 - Fixed some english typos (thanks Armin).
 - Updated to ECT 0.5.0.3 x86 and x64 optimized builds (thanks Malloc Voidstar).
+- Updated ImageMagick 7.0.2.4 with HDRI support.
 
 
 8.40 - 2016/06/17
