Updated to NSIS 3.0
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@507 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -192,6 +192,7 @@ X.XX - YYYY/MM/DD
 - Fixed some english typos (thanks Armin).
 - Updated to ECT 0.6.1.0 x86 and x64 optimized builds (thanks Malloc Voidstar).
 - Updated ImageMagick 7.0.2.5 with HDRI support.
+- Updated to NSIS 3.0.
 
 
 8.40 - 2016/06/17
