Updated to cppcheck 1.75
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@519 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -181,6 +181,7 @@ X.XX - YYYY/MM/DD
 - Reverted multiple instances detection (Special).
 - Made abort optimization message more clearer (Louis Horvath).
 - Changed from pngwolf to pngwolf-zopfli, which gives higher rations, and a native x64 build (TPS).
+- Updated to cppcheck 1.75.
 
 
 8.50 - 2016/08/01
