Simplified ECT multithreading, because it already knows the number of threads to use
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@524 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -181,6 +181,7 @@ X.XX - YYYY/MM/DD
 - Reverted multiple instances detection (Special).
 - Made abort optimization message more clearer (Louis Horvath).
 - Retested in Windows XP RTM, and Windows 10 Anniversary.
+- Simplified ECT multithreading, because it already knows the number of threads to use.
 - Updated Leanify to 0.4.3.149 daily binaries.
 - Updated to ECT 0.6.2.0 -ef70e0- x86 and x64 optimized builds (thanks Malloc Voidstar).
 - Changed from pngwolf to pngwolf-zopfli, which gives higher rations, and a native x64 build (TPS).
