Updated help file
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@529 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -170,6 +170,7 @@ X.XX - YYYY/MM/DD
 - Fixed main window position not properly restored on launch (hairycactus).
 - Simplified ECT multithreading, because it already knows the number of threads to use.
 - Retested in Windows XP RTM, and Windows 10 Anniversary.
+- Updated help file.
 - Updated Leanify to 0.4.3.149 daily binaries.
 - Updated to ECT 0.6.2.0 -ef70e0- x86 and x64 optimized builds (thanks Malloc Voidstar).
 - Changed from pngwolf to pngwolf-zopfli, which gives higher rations, and a native x64 build (TPS).
