--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -131,7 +131,7 @@ ndo
 - ImageWorsener 1.3.0 - http://entropymine.com/imageworsener
 - jhead 3.00 - http://www.sentex.net/~mwandel/jhead/
 - jpeg-archive 2.1.1 - https://github.com/danielgtaylor/jpeg-archive
-- jpegoptim 1.4.3 - http://www.kokkonen.net/tjko/projects.html
+- jpegoptim 1.4.4 - http://www.kokkonen.net/tjko/projects.html
 - jpegtran 9 - http://jpegclub.org/jpegtran/
 - jsmin 2013-03-29 - http://www.crockford.com/javascript/jsmin.html
 - Leanify 0.4.3.149 - https://github.com/JayXon/Leanify (https://ci.appveyor.com/project/JayXon/leanify)
@@ -157,6 +157,7 @@ ndo
 
 
 X.XX - YYYY/MM/DD
+- Updated jpegoptim to 1.4.4 (custom built).
 
 
 
