--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -127,7 +127,7 @@ ndo
 - Gifsicle Lossy 1.88 - https://kornel.ski/lossygif
 - Ghostscript 9.19 - http://www.ghostscript.com
 - GNU Strip 2.26 - http://www.gnu.org/software/binutils/
-- ImageMagick 7.0.2.7 - http://www.imagemagick.org
+- ImageMagick 7.0.2.9 - http://www.imagemagick.org
 - ImageWorsener 1.3.0 - http://entropymine.com/imageworsener
 - jhead 3.00 - http://www.sentex.net/~mwandel/jhead/
 - jpeg-archive 2.1.1 - https://github.com/danielgtaylor/jpeg-archive
@@ -158,7 +158,7 @@ ndo
 
 X.XX - YYYY/MM/DD
 - Updated jpegoptim to 1.4.4 (custom built).
-
+- Updated ImageMagick 7.0.2.9 with HDRI support.
 
 
 9.00 - 2016/08/15
