--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -163,7 +163,7 @@ ndo
 
 
 X.XX - YYYY/MM/DD
-- Added Adobe Illustrator AI extension to the PDF toolchain (maadjordan).
+- Added support for Adobe Illustrator (AI) file types (maadjordan).
 - Updated jpegoptim to 1.4.4 (custom built).
 - Updated ImageMagick 7.0.2.9 with HDRI support.
 
